@@ -1,3 +1,12 @@
+2002-05-09  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/x86_64/glob.c: Remove.
+	* sysdeps/unix/sysv/linux/s390/s390-64/glob.c: Remove.
+	* sysdeps/unix/sysv/linux/sparc/sparc64/glob.c: Remove.
+
+	* sysdeps/unix/sysv/linux/ia64/glob.c: Move to ...
+	* sysdeps/wordsize-64/glob.c: ...here.
+
 2002-05-08  Roland McGrath  <roland@frob.com>
 
 	* hurd/hurdfchdir.c (_hurd_change_directory_port_from_fd): Use
